# My_Learning-Rust

./: .gitignore  .gitmodules  .todo  Cargo.toml  README.md  cpp_vs_rust.md  faqs.md  rust-toolchain.toml  rust_vs_cpp.xlsx
libs/axum-playground/: Cargo.toml  README.md  requests.http
libs/axum-playground/examples/: api_heroku.rs  greet_name.rs  hello.rs  job_scheduler.rs  twilio.rs
libs/axum-playground/examples/axum-jon/: Cargo.toml  axum_jon_request.http  body.json
libs/axum-playground/src/: main.rs
libs/chatgpt_demo/: .env.template  Cargo.toml
libs/chatgpt_demo/src/: main.rs
libs/databases/mongo/demo/: .env.example  Cargo.toml
libs/databases/pgsql/demo/: .env.example  Cargo.toml  README.md
libs/databases/redis/demo/: .env.example  .todo  Cargo.toml
libs/dioxus/demo/: Cargo.toml  Dioxus.toml  tailwind.config.js
libs/dioxus/demo/src/: main.rs
libs/dioxus/playg/: Cargo.toml  Dioxus.toml  README.md  tailwind.config.js
libs/dioxus/playg/assets/: main.css
libs/dioxus/playg/public/: tailwind.css
libs/dioxus/playg/src/: blog.rs  counter.rs  home.rs  main.rs
libs/yew/yew-basic-web-app/: Cargo.toml  index.html
libs/yew/yew-basic-web-app/src/: app.rs  main.rs
tuts/: Cargo.toml  README.md  hello  hello.rs  types  types.rs
tuts/arg/: arg_1.rs
tuts/async/: README.md  sync1.rs  sync_4.rs  sync_5.rs
tuts/async/async_1/: Cargo.toml
tuts/async/async_1/src/: main.rs  tut_1.rs  tut_2.rs
tuts/cargo/: README.md
tuts/cfg/: README.md
tuts/collection/: README.md  arr_1.rs  arr_3.rs  arr_4.rs  arr_slice.rs  hashmap_2.rs  hashset_1.rs  slice1.rs  tuple1.rs  vec5.rs  vec_4.rs  vec_of_tuple.rs  vec_repetitive.rs  vec_to_arr.rs
tuts/concurrency/: README.md  concur_1.rs
tuts/conditional/: README.md  conditional_3.rs  conditional_4.rs  conditional_7.rs
tuts/container/: README.md  arr_1.rs  arr_2.rs  hashmap_1.rs  slice_1.rs  tuple_1.rs  tuple_2.rs  tuple_3.rs  vec_1.rs  vec_3.rs
tuts/crypto/: hash_1.rs  hash_2.rs
tuts/enum/: container_1.rs  enum_2.rs  enum_3.rs
tuts/error_handling/: README.md  asserteq_1.rs  asserteq_2.rs  expect_1.rs  expect_err_1.rs  opt_1.rs  opt_3.rs  opt_4.rs  panic_1.rs  panic_2.rs  res_1.rs  res_2.rs  res_4.rs  unreachable_1.rs  unwrap_1.rs  unwrap_err_1.rs
tuts/examples/topics/async/: README.md  mod.rs  spawn_blocking.rs  sync11.rs  sync2.rs  sync6.rs  sync8.rs  sync9.rs
tuts/features/: feature1.rs
tuts/fileio/: fileio_1.rs  mcq_extractor.rs  paper_urls.rs  paper_urls.txt
tuts/functions/: README.md  borrow_checker.rs  closure_1.rs  functions_1.rs  functions_2.rs  functions_3.rs  functions_4.rs
tuts/generics/: README.md  generic_trait.rs  generics_1.rs  generics_10.rs  generics_11.rs  generics_2.rs  generics_3.rs  generics_3a.rs  generics_4.rs  generics_6.rs  generics_8.rs
tuts/generics/tut_1/: README.md
tuts/generics/tut_1/src/: main.rs  (+7 more)
tuts/hello/: hello.rs
tuts/iterator/: collect_1.rs  collect_2.rs  collect_4_opt.rs  enumerate_3.rs  filter_1.rs  iter_1.rs  iter_2.rs  iter_5.rs  iterator_1.rs  iterator_2.rs  iterator_3.rs
tuts/lifetimes/: README.md  lifetime_0.rs
tuts/loop/: loop_1.rs  loop_2.rs  loop_3.rs
tuts/macros/: README.md  macros_0.rs  macros_1.rs
tuts/macros/src/: main.rs
tuts/modules/: README.md  modules3.rs
tuts/move_copy_clone/: README.md  clone_2.rs  move_1.rs  move_2.rs
tuts/ownership/: README.md  dereference_2.rs  dereference_3.rs  dereference_4.rs  dereference_5.rs  dereference_6.rs  lifetime_1.rs  lifetime_3.rs  move_semantics2.rs  reference_1.rs  reference_2.rs  reference_3.rs
tuts/pointer/: box_1.rs  box_3.rs  mutex_1.rs  rc_1.rs
tuts/print/: fmt_1.rs  print_4.rs  print_5.rs
tuts/rust_full/: Cargo.toml
tuts/rust_full/src/: main.rs
tuts/src/: main.rs
tuts/string/: str_7.rs  string_to_str.rs
tuts/structs/: README.md  struct_1.rs  struct_11.rs  struct_5.rs  struct_7.rs  structs6.rs  structs8.rs
tuts/test/: README.md
tuts/topics/async/: README.md  async12.rs  sync1.rs  sync10.rs  sync3.rs  sync5.rs  sync7.rs  sync9.rs
tuts/topics/cfg/: README.md
tuts/topics/collection/: README.md  btreemap1.rs  tuple_1.rs  vec_6.rs  vec_of_diff_elements.rs
tuts/topics/conditional/: README.md  conditional_1.rs  loop_1.rs  match_if.rs  matches.rs
tuts/topics/enum/: enum_3.rs  enum_5.rs  enum_6.rs
tuts/topics/error_handling/: README.md  assert_1.rs  err_expect.rs  err_prop.rs  expect_2.rs  map_err_1.rs  opt_1.rs  opt_2.rs  panic_2.rs  question_mark_1.rs  recoverable_err_1b.rs  recoverable_err_1c.rs  this_error.rs
tuts/topics/features/: README.md
tuts/topics/fileio/: fileio_2.rs  path_1.rs
tuts/topics/functions/: closure_1.rs  functions_1.rs  functions_3.rs
tuts/topics/generics/: generics_3b.rs  generics_4.rs  generics_9.rs
tuts/topics/iterator/: README.md  collect_5.rs  collect_5b.rs  enumerate_1.rs  iter_3.rs  iter_4.rs
tuts/topics/modules/: modules4.rs
tuts/topics/move_copy_clone/: README.md
tuts/topics/ownership/: README.md  dereference_1.rs  ownership_1.rs  reference_1_1.rs
tuts/topics/pointer/: array_addr.rs
tuts/topics/print/: print_1.rs  print_2.rs  print_6.rs
tuts/topics/string/: concat_1.rs  concat_3.rs  str_1.rs  str_6.rs  take_string_indices.rs
tuts/topics/structs/: README.md  struct_10.rs  struct_2.rs
tuts/topics/test/: README.md
tuts/topics/traits/: README.md  borrow_1.rs  clone_2.rs  display_trait.rs  dungeons_dragons.rs  dungeons_dragons_to.rs  gat_1.rs  traits_11b.rs  traits_16.rs  traits_17.rs  traits_5.rs
tuts/topics/variables/: README.md  variables_5.rs  variables_9.rs
tuts/traits/: README.md  asref_1.rs  associated_type_1.rs  clone_1.rs  cmp_1.rs  cmp_2.rs  cmp_3.rs  display_trait.rs  from_1.rs  gat_1.rs  gat_2.rs  ops_1.rs  traits_0.rs  traits_1.rs  traits_10.rs  traits_11a.rs  traits_12b_bounds.rs  traits_13.rs  traits_14.rs  traits_15a.rs  traits_2.rs  traits_3.rs  traits_4.rs  traits_5.rs  traits_7.rs  traits_interoperability.rs
tuts/type_of/: type_of1.rs
tuts/variables/: README.md  str_1.rs  str_2.rs  str_3.rs  str_4.rs  variables_1.rs  variables_2.rs  variables_4.rs  variables_5.rs  variables_6.rs  variables_8.rs
(+389 files in other folders)
