[workspace]
members = ["tuts/", "tuts/topics/async/*",
    "libs/axum-playground"  
    # "libs/chatgpt_demo"
    , "pro/rust-api-heroku", 
    "libs/databases/redis/demo", 
    "pro/basic-router", 
    "libs/smol-demo", 
    "libs/llm-chain/demo", 
    "libs/databases/mongo/demo",
    "libs/axum-playground/examples/axum-jon",
    "libs/yew/*", "libs/gtk4/demo", "libs/relm4/demo"]
resolver = "2"
