[workspace]
members = [
    "libs/axum-playground",
    # "libs/chatgpt_demo",
    "pro/rust-api-heroku", 
    "libs/databases/redis/demo", 
    "pro/basic-router", 
    "libs/smol-demo", 
    "libs/llm-chain/demo", 
    "libs/databases/mongo/demo",
    "libs/axum-playground/examples/axum-jon",
    "libs/yew/*", 
    "libs/gtk4/demo", 
    "libs/relm4/demo", 
    "libs/dioxus/demo",
    "libs/freya/freya-app",
    "tuts/", 
    "tuts/examples/topics/async/async-1",
    "tuts/examples/topics/async/async-await-jon",
    "tuts/examples/topics/pointer/pointers-jon",
]
resolver = "2"