[package]
name = "tuts"
description = "Learning Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
color-eyre = "0.6.2"
dirs = "4.0"
env_logger = "0.10.1"
eyre = "0.6.8"
log = "0.4.20"
thiserror = "1.0.52"
tokio = { version = "1.35.0", features = ["full"] }

[features]
main1 = []
main2 = []
