[package]
name = "tuts"
description = "Learning Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
color-eyre = "0.6.2"
dirs = "5.0.1"
env_logger = "0.10.1"
eyre = "0.6.8"
hyper = "1.1.0"
log = "0.4.20"
thiserror = "1.0.52"
tokio = { version = "1.35.0", features = ["full"] }

[[example]]
name = "hashmap_2"
path = "examples/topics/collection/hashmap_2.rs"

[[example]]
name = "hashmap_3"
path = "examples/topics/collection/hashmap_3.rs"

[features]
main1 = []
main2 = []