[package]
name = "axum-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# api framework
axum = "0.7.6"
# async runtime
tokio = { version = "1.40.0", features = ["full"] }

# logging
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# env
dotenv = "0.15.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

eyre = "0.6.12"
tokio-cron-scheduler = { version = "0.13.0", features = ["english"] }
