[package]
name = "chatgpt_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chatgpt_rs = {git = "https://github.com/Maxuss/chatgpt_rs"}
dotenv = "0.15.0"
tokio = { version = "1.34.0", features = ["full"] }
