[package]
name = "yew-basic-web-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = {version = "0.21.0", "features" = ["csr"]}
yew-router = "0.18.0"
web-sys = "0.3.61"
log = "0.4.17"
wasm-logger = "0.2.0"