[package]
name = "axum-jon"
version = "0.1.0"
edition = "2021"

[dependencies]
# api framework
axum = "0.7.5"
# async runtime
tokio = { version = "1.38.1", features = ["full"] }

# logging
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
