[package]
name = "mongodb_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
chrono = "0.4.26"
dotenv = "0.15.0"
mongodb = {version = "2.6.0", default-features = false, features = ["async-std-runtime"]}
serde = "1.0.183"
serde_json = "1.0.104"
