[package]
name = "mongodb_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
dotenv = "0.15.0"
futures-lite = "2.2.0"
mongodb = {version = "2.8.1", default-features = false, features = ["tokio-runtime"]}
serde = "1.0.183"
serde_json = "1.0.104"
tokio = {version = "1.25.0", features = ["full"]}
