[package]
name = "mongodb-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
dotenv = "0.15.0"
serde = "1.0.188"
futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"]}
eyre = "0.6.12"

[dependencies.mongodb]
version = "2.8.2"
features = ["tokio-runtime"]
