[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
dotenv = "0.15.0"
# redis_url w/o TLS support
# redis = "0.23.1"
# redis_url with TLS support i.e. "rediss://...."
redis = {version = "0.23.1", features = ["tls-native-tls"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
